Enhanced project setup by adding superuser creation from environment variables, updating Docker configurations for development, and improving logging throughout the application. Updated README files for better documentation and removed obsolete test files.

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ DB_HOST="db"
 DB_NAME="devdb"
 DB_USER="devuser"
 DB_PASS="devpass"
+
+# Django Superuser (for management command)
+SUPERUSER_USERNAME="admin"
+SUPERUSER_EMAIL="admin@example.com"
+SUPERUSER_PASSWORD="adminpass"
