--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,7 +1,7 @@
 services:
   app:
-    container_name: inethi-monitoring
-
+    container_name: inethi-monitoring-dev
+    restart: no
     env_file:
       - ./.env
     build:
@@ -12,10 +12,7 @@ services:
       - "8100:8000"
     volumes:
       - ./monitoring:/monitoring
-    command: >
-      sh -c "python manage.py wait_for_db &&
-              python manage.py migrate &&
-              python manage.py runserver 0.0.0.0:8000"
+    entrypoint: ["/monitoring/run.sh"]
     environment:
       - DB_HOST=${DB_HOST:-db}
       - DB_NAME=${DB_NAME:-devdb}
@@ -26,8 +23,8 @@ services:
 
   db:
     image: timescale/timescaledb:latest-pg17
-    container_name: inethi-monitoring-db-timescale
-
+    container_name: inethi-monitoring-db-timescale-dev
+    restart: no
     env_file:
       - ./.env
     volumes:
@@ -39,10 +36,10 @@ services:
 
   redis:
     image: redis:alpine
-    container_name: inethi-monitoring-celery-redis
-
+    container_name: inethi-monitoring-celery-redis-dev
+    restart: no
   celery:
-    container_name: inethi-monitoring-celery
+    container_name: inethi-monitoring-celery-dev
     build:
       context: .
     env_file:
@@ -54,13 +51,13 @@ services:
     environment:
       - CELERY_BROKER=redis://redis:6379/0
       - CELERY_BACKEND=redis://redis:6379/0
-
+    restart: no
     depends_on:
       - redis
       - db
 
   celery_beat:
-    container_name: inethi-monitoring-celery-beat
+    container_name: inethi-monitoring-celery-beat-dev
     build:
       context: .
     env_file:
@@ -71,7 +68,7 @@ services:
     environment:
       - CELERY_BROKER=redis://redis:6379/0
       - CELERY_BACKEND=redis://redis:6379/0
-
+    restart: no
     depends_on:
       - redis
       - db
