--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -12,10 +12,7 @@ services:
       - "8100:8000"
     volumes:
       - ./monitoring:/monitoring
-    command: >
-      sh -c "python manage.py wait_for_db &&
-              python manage.py migrate &&
-              python manage.py runserver 0.0.0.0:8000"
+    entrypoint: ["/monitoring/run.sh"]
     environment:
       - DB_HOST=${DB_HOST:-db}
       - DB_NAME=${DB_NAME:-devdb}
